# TizenRT

./: .checkpatch.conf  .clang-format  .cproject  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  .typo-ci.yml  260406_qemu.md  260406_qemu_KOR.md  260409_qemu_emulation_plan_KOR.md  260411_qemu_emulation_summary_KOR.md  CODEOWNERS  LICENSE  README.md  ReleaseNotes  melong  result1.org  test.py  test.txt
apps/examples/nettest/: CMakeLists.txt  Kconfig  Kconfig_ENTRY  Make.defs  Makefile  README.txt  linux-nettest.c  netlog_test.c  nettest.c  nettest_stress.c  test_main.c
apps/examples/nettest/linux_server/: build.sh  server_sample.c
os/board/bk7239n/src/components/bk_phy/: CMakeLists.txt  Kconfig
os/board/bk7239n/src/components/bk_phy/include/: bk_phy_adapter.h  bk_phy_ate.h  bk_rf_adapter.h  bk_rf_internal.h  bk_wifi_phy_internal.h
os/board/bk7239n/src/components/bk_phy/src/: Make.defs  bk_phy_adapter.c  bk_phy_api.c  bk_rf_adapter.c
os/board/bk7239n/src/components/bk_wifi/: CMakeLists.txt  Kconfig
os/board/bk7239n/src/components/bk_wifi/include/: bk_wifi_adapter.h  bk_wifi_prop_private.h  bk_workqueue.h  co_bit.h  co_list.h  ethernet_intf.h  fhost_mac.h  fhost_msg.h  fhost_tx.h  hostapd_intf.h  reg_access.h  reg_domain.h  rw_ieee80211.h  rw_msdu.h  rw_msg_rx.h  rw_msg_tx.h  rw_tx_buffering.h  rwm_proto.h  rwnx_config.h  rwnx_defs.h  rwnx_err.h  rwnx_intf.h  rwnx_misc.h  rwnx_params.h  rwnx_rx.h  rwnx_td.h  rwnx_tx.h  rwnx_txq.h  rwnx_version.h  sa_ap.h  skbuff.h  soft_encrypt.h  wifi_at.h  wifi_config.h  wifi_init.h  wifi_spinlock.h  wifi_v2.h
os/board/bk7239n/src/components/bk_wifi/scripts/: bin2c.py  check_generated_headers.sh  db.txt  db2bin.py  db2fw.py  dbparse.py
os/board/bk7239n/src/components/bk_wifi/src/: Make.defs  bk_wifi_adapter.c  bk_workqueue.c  hostapd_intf.c  hw_csum.c  lsig_monitor.c  net_param.c  pbuf.c  phy.c  reg.c  regdb.c  regdb_bin.c  rw_ieee80211.c  rw_msdu.c  rw_msg_rx.c  rw_msg_tx.c  rw_task.c  rw_tx_buffering.c  rwm_proto.c  rwnx_misc.c  rwnx_params.c  rwnx_rx.c  rwnx_td.c  rwnx_tx.c  rwnx_txq.c  rwnx_utils.c  sa_ap.c  sa_station.c  skbuff.c  soft_encrypt.c  wifi_api.c  wifi_at.c  wifi_config.c  wifi_frame.c  wifi_init.c  wifi_netif.c  wifi_v2.c  wifi_wpa_cmd.c
os/board/bk7239n/src/components/tfm/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  build.sh  tfm_build_RELEASE_NOTE.txt  tfm_ns_interface.c
os/board/bk7239n/src/components/tfm/tfm/: .gitattributes  .gitreview  CMakeLists.txt  readme.rst  toolchain_ARMCLANG.cmake  toolchain_GNUARM.cmake  toolchain_IARARM.cmake
os/board/bk7239n/src/components/tfm_mbedtls/ed25519/: CMakeLists.txt  readme.md
os/board/bk7239n/src/components/tfm_tests/: CMakeLists.txt  license.rst  readme.rst
os/board/bk7239n/src/components/tfm_tests/CMSIS/: README
os/board/bk7239n/src/components/tfm_tests/app/: CMakeLists.txt  main_ns.c  os_wrapper_cmsis_rtos_v2.c  psa_api_test.c  tfm_integ_test.c  tfm_integ_test.h  tfm_log.h  tfm_nsid_map_table.c  tfm_nsid_map_table.h
os/board/bk7239n/src/components/tfm_tests/log/: CMakeLists.txt  tfm_log_raw.c
os/board/bk7239n/src/components/tfm_tests/test/: CMakeLists.txt
os/board/bk7239n/src/middleware/driver/: CMakeLists.txt  Kconfig  SConscript
os/board/bk7239n/src/middleware/driver/aon_wdt/: aon_wdt_driver.c  aon_wdt_driver.h
os/board/bk7239n/src/middleware/driver/audio/: audio_ring_buff.c  uac_driver.c
os/board/bk7239n/src/middleware/driver/bk7239n/: gpio_driver.c  gpio_driver.h  interrupt.c  interrupt.h  interrupt_statis.c
os/board/bk7239n/src/middleware/driver/calendar/: Kconfig  calendar_driver.c  calendar_driver.h
os/board/bk7239n/src/middleware/driver/chip_support/: chip_support.c
os/board/bk7239n/src/middleware/driver/ckmn/: CMakeLists.txt  Kconfig  ckmn_driver.c  ckmn_driver.h  ckmn_test.c
os/board/bk7239n/src/middleware/driver/common/: dd.c  driver.c  drv_model.h
os/board/bk7239n/src/middleware/driver/deep_lv/: Kconfig  deep_lv.c  deep_lv.h
os/board/bk7239n/src/middleware/driver/device/: CMakeLists.txt  Kconfig  device.c
os/board/bk7239n/src/middleware/driver/efuse/: Kconfig  efuse_driver.c
os/board/bk7239n/src/middleware/driver/eth/: eth_mac.c  eth_mac.h  eth_mac_ex.c  eth_mac_ex.h  eth_mac_regs.h  eth_mac_types.h  lan8742.c  lan8742.h
os/board/bk7239n/src/middleware/driver/fft/: fft.c  fft.h  fft_driver.c  fft_driver.h
os/board/bk7239n/src/middleware/driver/flash/: Kconfig  flash_bypass.h  flash_driver.c  flash_driver.h  flash_partition.c
os/board/bk7239n/src/middleware/driver/general_dma/: Kconfig  ReadMe.txt
os/board/bk7239n/src/middleware/driver/gpio/: CMakeLists.txt  Kconfig  ana_gpio_driver.c  ana_gpio_driver.h  gpio_clk_pin.c  gpio_clk_pin.h  gpio_driver_base.c
os/board/bk7239n/src/middleware/driver/hw_rotate/: CMakeLists.txt  Kconfig  rott_driver.c
os/board/bk7239n/src/middleware/driver/hw_scale/: CMakeLists.txt  Kconfig  hw_scale_driver.c
os/board/bk7239n/src/middleware/driver/i2c/: i2c_driver.c  i2c_driver.h  i2c_statis.c  i2c_statis.h  sim_i2c_driver.c
os/board/bk7239n/src/middleware/driver/i2s/: i2s.c  i2s.h  i2s_driver.c  i2s_driver.h  i2s_driver_v1_1.c
os/board/bk7239n/src/middleware/driver/icu/: Kconfig  icu_driver.c  interrupt_base.c
os/board/bk7239n/src/middleware/driver/io_matrix/: CMakeLists.txt
os/board/bk7239n/src/middleware/driver/lcd/: Kconfig  lcd_driver.c  lcd_qspi_driver.c  lcd_qspi_driver.h  lcd_spi.c
os/board/bk7239n/src/middleware/driver/otp/: Kconfig  otp_driver.c  otp_driver.h
os/board/bk7239n/src/middleware/driver/pmu/: Kconfig  aon_pmu_driver.c  aon_pmu_driver.h  pmu.h
os/board/bk7239n/src/middleware/driver/port/: os_port.c
os/board/bk7239n/src/middleware/driver/psram/: Kconfig  psram_driver.c  psram_driver.h
os/board/bk7239n/src/middleware/driver/pwm/: CMakeLists.txt  ReadMe.txt
os/board/bk7239n/src/middleware/driver/pwr_clk/: Kconfig  pwr_clk.c  rosc.h  rosc_32k.c  rosc_ppm.c
os/board/bk7239n/src/middleware/driver/qspi/: Kconfig  qspi_driver.c  qspi_driver.h  qspi_flash.c  qspi_psram.c  qspi_statis.c  qspi_statis.h
(+18758 files in other folders)
