set(incs include)
set(srcs)
if(CONFIG_WIFI_ENABLE)
list(APPEND srcs
	src/bk_phy_adapter.c
	src/bk_rf_adapter.c
	src/bk_phy_api.c
)
endif()
armino_component_register(SRCS "${srcs}"
    INCLUDE_DIRS "${incs}"
    PRIV_REQUIRES bk_common bk_bluetooth
    )

if (CONFIG_SOC_BK7239XX)
	if (CONFIG_TZ AND NOT CONFIG_SPE)
		if(CONFIG_WIFI_ENABLE AND NOT CONFIG_NON_SIGANL_PHY_ENABLE AND CONFIG_DPD_CALI)
			set (phy_elem libnon_signal_phy_nspe.a)
		elseif (CONFIG_BLUETOOTH AND NOT CONFIG_WIFI_ENABLE)
			set (phy_elem libcom_phy_nspe.a)
		elseif (CONFIG_WIFI_ENABLE AND CONFIG_DPD_CALI AND CONFIG_NON_SIGANL_PHY_ENABLE)
			set (phy_elem libdpd_phy_nspe.a)
		elseif (CONFIG_WIFI_ENABLE AND NOT CONFIG_DPD_CALI AND CONFIG_NON_SIGANL_PHY_ENABLE)
			set (phy_elem libdpd_non_signal_phy_nspe.a)
		elseif (CONFIG_ATE_TEST)
			set (phy_elem libate_phy_nspe.a)
		else()
			set (phy_elem libbk_phy_nspe.a)
		endif()
	else()
		if(CONFIG_WIFI_ENABLE AND NOT CONFIG_NON_SIGANL_PHY_ENABLE AND CONFIG_DPD_CALI)
			set (phy_elem libnon_signal_bk_phy.a)
		elseif (CONFIG_BLUETOOTH AND NOT CONFIG_WIFI_ENABLE)
			set (phy_elem libcom_phy.a)
		elseif (CONFIG_WIFI_ENABLE AND CONFIG_DPD_CALI AND CONFIG_NON_SIGANL_PHY_ENABLE)
			set (phy_elem libdpd_phy.a)
		elseif (CONFIG_WIFI_ENABLE AND NOT CONFIG_DPD_CALI AND CONFIG_NON_SIGANL_PHY_ENABLE)
			set (phy_elem libdpd_non_signal_phy.a)
		elseif (CONFIG_ATE_TEST)
			set (phy_elem libate_phy.a)
		else()
			set (phy_elem libbk_phy.a)
		endif()
	endif()
else()
	if (CONFIG_TZ AND NOT CONFIG_SPE)
		if(CONFIG_WIFI_ENABLE AND NOT CONFIG_NON_SIGANL_PHY_ENABLE)
			set (phy_elem libnon_signal_phy_nspe.a)
		elseif (CONFIG_BLUETOOTH AND NOT CONFIG_WIFI_ENABLE)
			set (phy_elem libcom_phy_nspe.a)
		elseif (CONFIG_ATE_TEST)
			set (phy_elem libate_phy_nspe.a)
		else()
			set (phy_elem libbk_phy_nspe.a)
		endif()
	else()
		if(CONFIG_WIFI_ENABLE AND NOT CONFIG_NON_SIGANL_PHY_ENABLE)
			set (phy_elem libnon_signal_bk_phy.a)
		elseif (CONFIG_BLUETOOTH AND NOT CONFIG_WIFI_ENABLE)
			set (phy_elem libcom_phy.a)
		elseif (CONFIG_ATE_TEST)
			set (phy_elem libate_phy.a)
		else()
			set (phy_elem libbk_phy.a)
		endif()
	endif()
endif()

if (EXISTS ${ARMINO_PATH}/components/bk_libs/${ARMINO_SOC}/libs/libbk_phy_info.a)
set(phy_elem ${phy_elem} libbk_phy_info.a)
endif()

foreach(lib_name ${phy_elem})
	add_prebuilt_library(${lib_name} "${ARMINO_PATH}/components/bk_libs/${ARMINO_SOC}/libs/${lib_name}")
	target_link_libraries(${COMPONENT_LIB} INTERFACE ${lib_name})
endforeach()

